Trivial code quality improvements